--- a/Features/ScreenEvents/Source/Mvvm/Mvvm.csproj
+++ b/Features/ScreenEvents/Source/Mvvm/Mvvm.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Common\Events\EventSubscriptionManager.cs" />
     <Compile Include="Common\Events\ExecutionOrder.cs" />
     <Compile Include="Common\Events\HierarchicalEvent.cs" />
+    <Compile Include="Common\Events\HierarchicalEventBase.cs" />
     <Compile Include="Common\Events\HierarchicalEventSubscription.cs" />
     <Compile Include="Common\Events\IEvent.cs" />
     <Compile Include="Common\Events\IEventCondition.cs" />
