--- a/Source/MvvmTest/MvvmTest.csproj
+++ b/Source/MvvmTest/MvvmTest.csproj
@@ -163,6 +163,7 @@
     <Compile Include="ApiTests\ViewModels\Validation\ParentValidationTests.cs" />
     <Compile Include="ApiTests\ViewModels\Validation\ValidationForNullableDecimalTests.cs" />
     <Compile Include="ApiTests\ViewModels\Validation\ValidationResultCachingTests.cs" />
+    <Compile Include="ApiTests\ViewModels\Validation\ValidatorConditionTests.cs" />
     <Compile Include="ApiTests\ViewModels\Validation\ViewModelPropertyValidationTests.cs" />
     <Compile Include="ApiTests\ViewModels\Validation\CollectionRevalidationTests.cs" />
     <Compile Include="ApiTests\ViewModels\Validation\CollectionValidationFixture.cs" />
