Deleted empty folders.

--- a/Source/MvvmExample/MvvmExample.csproj
+++ b/Source/MvvmExample/MvvmExample.csproj
@@ -105,9 +105,7 @@
       <Name>Mvvm</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Domain\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Page Include="Views\ShellView.xaml">
       <SubType>Designer</SubType>
