--- a/Source/Mvvm/Mvvm.csproj
+++ b/Source/Mvvm/Mvvm.csproj
@@ -480,11 +480,7 @@
       <LastGenOutput>EViewModels.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModels\Core\Properties\SimpleProperty\BehaviorInterfaces\" />
-    <Folder Include="ViewModels\Core\Properties\ViewModelProperty\BehaviorInterfaces\" />
-    <Folder Include="Views\TestDoubles\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Testing\- Diagrams -\DialogTestService.cd" />
     <None Include="Views\- Diagrams -\ViewBinder.cd" />
