--- a/Source/MvvmContrib/MvvmContrib.csproj
+++ b/Source/MvvmContrib/MvvmContrib.csproj
@@ -33,7 +33,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\InspiringMvvmContrib.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\InspiringMvvmContrib.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
@@ -49,6 +49,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Mvvm\Check.cs">
+      <Link>Check.cs</Link>
+    </Compile>
     <Compile Include="Common\Optional.cs" />
     <Compile Include="Common\ReferenceEqualityComparer.cs" />
     <Compile Include="ExceptionTexts.Designer.cs">
