Removed duplicate license file.

--- a/Source/MvvmContrib/MvvmContrib.csproj
+++ b/Source/MvvmContrib/MvvmContrib.csproj
@@ -119,7 +119,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Finding screens.txt" />
+    <None Include="Finding screens.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ViewModels\- Diagrams -\Selection Hierarchy.cd" />
